# Algortimos-bioinspirados-con-interacciones-negativas

./: README.md
BFA/: CMakeLists.txt  bfa.cpp  bfa.h  cmake_install.cmake  functions.cpp  main.cpp
DA/: CMakeLists.txt  cmake_install.cmake  da.cpp  da.h  main.cpp
FA/: CMakeLists.txt  cmake_install.cmake  firefly.cpp  firefly.h  main.cpp
GOA/: CMakeLists.txt  cmake_install.cmake  goa.cpp  goa.h  main.cpp
armadillo-8.400.0/: ArmadilloConfig.cmake  CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  libarmadillo.so.8.400.0
armadillo-8.400.0/tmp/include/armadillo_bits/: config.hpp
